--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
             onclick="createTable()"
             >New game</button>
         </div>
+        <p id="winnerMessage"></p>
     </div>
-    <script src="script.js"></script>
+    <script src="script.js">""</script>
   </body>
 </html>
